<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="@string/drawer_section_profile">
        <menu>
            <item
                android:id="@+id/nav_pending"
                android:icon="@drawable/ic_profile_pending"
                android:title="@string/profile_pending" />
            <item
                android:id="@+id/nav_saved"
                android:icon="@drawable/ic_profile_saved"
                android:title="@string/profile_saved" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_profile_history"
                android:title="@string/profile_history" />
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_profile_favorite"
                android:title="@string/profile_favorite" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_profile_settings"
                android:title="@string/profile_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_profile_help"
                android:title="@string/profile_help" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_profile_logout"
        android:title="@string/profile_logout" />
</menu>

